<resources>
    <string name="app_name">WorkBlue Todo App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_email">Enter your email</string>
    <string name="hint_password">Enter your password</string>
    <string name="hint_name">Enter your name</string>
    <string name="hint_confirmPass">Confirm your password</string>
    <string name="error_email">You need to use your student email address</string>
    <string name="error_password">Password must contain at least 8 characters</string>

    <!--Facebook-->
    <string name="facebook_app_id">684927886345384</string>
    <string name="fb_login_protocol_scheme">fb684927886345384</string>
    <string name="facebook_client_token">5642d0b305f1d76dab729623e109f091</string>

    <!--Google-->
    <string name="app_name_location">CurrentLocation</string>
    <string name="map_key">AIzaSyBhmMKrrltPCSFYV3U5FfBrh3U53t-rWAQ</string>

    <!--Navigation-->
    <string name="nav_main">Tasks</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_log_out">Log Out</string>
    <string name="nav_help_amp_feedback"><![CDATA[Help & Feedback]]></string>
    <string name="nav_terms_of_use">Terms of use</string>
    <string name="nav_contact_us">Contact us</string>
    <string name="nav_communicate">Communicate</string>
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="search">Search</string>
    <string name="notifications">Notifications</string>
    <string name="tan_phat_in4">Phone number : 0938288245 - Tấn Phát - 520H0664</string>
    <string name="location_tdtu">Location : TDTU University</string>
    <string name="huu_phuc_in4">Phone number : 0906819236 - Hữu Phúc - 420H0484</string>
    <string name="honag_tuan_in4">Phone number : 0857788086 - Hoàng Tuấn - 520H0325</string>
    <string name="in4Show">There are all information about us! If you have any question, please contact us!</string>
    <string name="thanks">Thanks for using ours app!</string>
    <string name="application_user_guide">Application User Guide</string>
    <string name="select_help_guild">Select help guild:</string>
    <string name="feedback">Feedback</string>
    <string name="send_feedback">Please send us your feedback</string>
    <string name="send_your_feedback">Send your feedback</string>


</resources>