<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/main"
            android:title="@string/nav_main" />

        <item
            android:id="@+id/settings"
            android:title="@string/nav_settings" />

        <item
            android:id="@+id/logout"
            android:title="@string/nav_log_out" />
    </group>

    <item android:title="@string/nav_communicate">
        <menu>
            <item
                android:id="@+id/help_feedback"
                android:title="@string/nav_help_amp_feedback" />

            <item
                android:id="@+id/terms"
                android:title="@string/nav_terms_of_use" />

            <item
                android:id="@+id/contact"
                android:title="@string/nav_contact_us" />
        </menu>
    </item>

</menu>